@@ -15,6 +15,7 @@ java {
 
 repositories {
 	mavenCentral()
+
 }
 
 dependencies {
@@ -28,6 +29,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+	implementation 'org.openkoreantext:open-korean-text:2.1.0'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -38,4 +40,10 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+	options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED']
+	options.compilerArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+	options.compilerArgs += ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
 }
